# Advent-of-Code-2024

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/: dependabot.yml
day/01/: README.md  python_01.py
day/02/: README.md  python_02.py
day/03/: README.md  python_03.py
day/04/: README.md  python_04.py
day/05/: README.md  python_05.py
day/06/: README.md  python_06.py
day/07/: README.md  python_07.py
day/08/: README.md  python_08.py
day/09/: README.md  python_09.py
day/10/: README.md  python_10.py
day/11/: README.md  python_11.py
day/12/: README.md  python_12.py
day/13/: README.md  python_13.py
day/14/: README.md  python_14.py
day/15/: README.md  python_15.py
day/16/: README.md  python_16.py
day/17/: README.md  REDME.md  python_17.py
day/18/: README.md  python_18.py
day/19/: README.md  python_19.py
day/20/: README.md  python_20.py
